1/ComplejosParser.py
# Generated from Complejos.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ComplejosParser ( Parser ):

    grammarFileName = "Complejos.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'i'", "<INVALID>", "<INVALID>", "'+'", 
                     "'-'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "INT", "FLOAT", "PLUS", 
                      "MINUS", "LPAREN", "RPAREN", "WS" ]

    RULE_expr = 0
    RULE_complexExpr = 1
    RULE_complejo = 2
    RULE_real = 3
    RULE_imaginary = 4
    RULE_signo = 5

    ruleNames =  [ "expr", "complexExpr", "complejo", "real", "imaginary", 
                   "signo" ]

    EOF = Token.EOF
    T__0=1
    INT=2
    FLOAT=3
    PLUS=4
    MINUS=5
    LPAREN=6
    RPAREN=7
    WS=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def complexExpr(self):
            return self.getTypedRuleContext(ComplejosParser.ComplexExprContext,0)


        def EOF(self):
            return self.getToken(ComplejosParser.EOF, 0)

        def getRuleIndex(self):
            return ComplejosParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = ComplejosParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.complexExpr(0)
            self.state = 13
            self.match(ComplejosParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComplexExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ComplejosParser.RULE_complexExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SumaContext(ComplexExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.ComplexExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def complexExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ComplejosParser.ComplexExprContext)
            else:
                return self.getTypedRuleContext(ComplejosParser.ComplexExprContext,i)

        def PLUS(self):
            return self.getToken(ComplejosParser.PLUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuma" ):
                listener.enterSuma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuma" ):
                listener.exitSuma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuma" ):
                return visitor.visitSuma(self)
            else:
                return visitor.visitChildren(self)


    class ParentesisContext(ComplexExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.ComplexExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(ComplejosParser.LPAREN, 0)
        def complexExpr(self):
            return self.getTypedRuleContext(ComplejosParser.ComplexExprContext,0)

        def RPAREN(self):
            return self.getToken(ComplejosParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentesis" ):
                listener.enterParentesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentesis" ):
                listener.exitParentesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentesis" ):
                return visitor.visitParentesis(self)
            else:
                return visitor.visitChildren(self)


    class ComplejoSimpleContext(ComplexExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.ComplexExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def complejo(self):
            return self.getTypedRuleContext(ComplejosParser.ComplejoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplejoSimple" ):
                listener.enterComplejoSimple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplejoSimple" ):
                listener.exitComplejoSimple(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComplejoSimple" ):
                return visitor.visitComplejoSimple(self)
            else:
                return visitor.visitChildren(self)


    class RestaContext(ComplexExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.ComplexExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def complexExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ComplejosParser.ComplexExprContext)
            else:
                return self.getTypedRuleContext(ComplejosParser.ComplexExprContext,i)

        def MINUS(self):
            return self.getToken(ComplejosParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResta" ):
                listener.enterResta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResta" ):
                listener.exitResta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResta" ):
                return visitor.visitResta(self)
            else:
                return visitor.visitChildren(self)



    def complexExpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ComplejosParser.ComplexExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_complexExpr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                localctx = ComplejosParser.ParentesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 16
                self.match(ComplejosParser.LPAREN)
                self.state = 17
                self.complexExpr(0)
                self.state = 18
                self.match(ComplejosParser.RPAREN)
                pass
            elif token in [2, 3]:
                localctx = ComplejosParser.ComplejoSimpleContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 20
                self.complejo()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 31
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 29
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = ComplejosParser.SumaContext(self, ComplejosParser.ComplexExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_complexExpr)
                        self.state = 23
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 24
                        self.match(ComplejosParser.PLUS)
                        self.state = 25
                        self.complexExpr(5)
                        pass

                    elif la_ == 2:
                        localctx = ComplejosParser.RestaContext(self, ComplejosParser.ComplexExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_complexExpr)
                        self.state = 26
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 27
                        self.match(ComplejosParser.MINUS)
                        self.state = 28
                        self.complexExpr(4)
                        pass

             
                self.state = 33
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ComplejoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ComplejosParser.RULE_complejo

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SoloImaginarioContext(ComplejoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.ComplejoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def imaginary(self):
            return self.getTypedRuleContext(ComplejosParser.ImaginaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSoloImaginario" ):
                listener.enterSoloImaginario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSoloImaginario" ):
                listener.exitSoloImaginario(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSoloImaginario" ):
                return visitor.visitSoloImaginario(self)
            else:
                return visitor.visitChildren(self)


    class RealConImaginarioContext(ComplejoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.ComplejoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def real(self):
            return self.getTypedRuleContext(ComplejosParser.RealContext,0)

        def signo(self):
            return self.getTypedRuleContext(ComplejosParser.SignoContext,0)

        def imaginary(self):
            return self.getTypedRuleContext(ComplejosParser.ImaginaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRealConImaginario" ):
                listener.enterRealConImaginario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRealConImaginario" ):
                listener.exitRealConImaginario(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRealConImaginario" ):
                return visitor.visitRealConImaginario(self)
            else:
                return visitor.visitChildren(self)



    def complejo(self):

        localctx = ComplejosParser.ComplejoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_complejo)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = ComplejosParser.RealConImaginarioContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.real()
                self.state = 38
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 35
                    self.signo()
                    self.state = 36
                    self.imaginary()


                pass

            elif la_ == 2:
                localctx = ComplejosParser.SoloImaginarioContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.imaginary()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RealContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ComplejosParser.INT, 0)

        def FLOAT(self):
            return self.getToken(ComplejosParser.FLOAT, 0)

        def getRuleIndex(self):
            return ComplejosParser.RULE_real

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReal" ):
                listener.enterReal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReal" ):
                listener.exitReal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReal" ):
                return visitor.visitReal(self)
            else:
                return visitor.visitChildren(self)




    def real(self):

        localctx = ComplejosParser.RealContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_real)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImaginaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def real(self):
            return self.getTypedRuleContext(ComplejosParser.RealContext,0)


        def getRuleIndex(self):
            return ComplejosParser.RULE_imaginary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImaginary" ):
                listener.enterImaginary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImaginary" ):
                listener.exitImaginary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImaginary" ):
                return visitor.visitImaginary(self)
            else:
                return visitor.visitChildren(self)




    def imaginary(self):

        localctx = ComplejosParser.ImaginaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_imaginary)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.real()
            self.state = 46
            self.match(ComplejosParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(ComplejosParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(ComplejosParser.MINUS, 0)

        def getRuleIndex(self):
            return ComplejosParser.RULE_signo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSigno" ):
                listener.enterSigno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSigno" ):
                listener.exitSigno(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSigno" ):
                return visitor.visitSigno(self)
            else:
                return visitor.visitChildren(self)




    def signo(self):

        localctx = ComplejosParser.SignoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_signo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not(_la==4 or _la==5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.complexExpr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def complexExpr_sempred(self, localctx:ComplexExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         




